--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "reset:modules": "rm -rf node_modules && npm i",
+    "reset": "rm -rf node_modules && npm i",
     "security:fix": "npm audit fix"
   },
   "repository": {
@@ -30,6 +30,6 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongoose": "^5.9.2"
+    "mongoose": "^5.9.7"
   }
 }
