--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "reset": "rm -rf node_modules && npm i",
+    "reset": "rm -rf node_modules",
+    "reinstall": "rm -rf node_modules && npm i",
     "security:fix": "npm audit fix"
   },
   "repository": {
@@ -20,16 +21,25 @@
   },
   "homepage": "https://github.com/benAkehurst/nodejs-api-server#readme",
   "devDependencies": {
-    "nodemon": "^2.0.2"
+    "nodemon": "^2.0.4"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-random-string": "^3.3.0",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.9.7"
+    "lodash": "^4.17.20",
+    "mongo-sanitize": "^1.1.0",
+    "mongoose": "^5.10.3",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.4.17",
+    "uuid": "^8.3.2",
+    "winston": "^3.3.3"
   }
 }
