--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-simple-pull-to-refresh": "^1.2.3",
     "react-test-renderer": "^16.13.1"
   },
   "scripts": {
