--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^5.10.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
+    "qrcode": "^1.4.4",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   }
