--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "google-auth-library": "^6.1.6",
     "helmet": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
