--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "app-root-path": "^3.0.0",
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -41,6 +42,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
     "qrcode": "^1.4.4",
+    "swagger-ui-express": "^4.1.6",
     "uuid": "^8.3.2",
     "winston": "^3.3.3"
   }
